<resources>
    <string name="app_name">Story App</string>
    <string name="welcome_image">Image Welcome</string>
    <string name="title_welcome_page">Welcome to the My Story App!</string>
    <string name="message_welcome_page">Want to share stories, read stories? My Story App is just a storytelling application for those of you who like to tell stories</string>
    <string name="signup">Sign up</string>
    <string name="signup_error">"Signup failed, try again!"</string>
    <string name="signup_image">Image Signup</string>
    <string name="signup_title">Complete your data below, OK?</string>
    <string name="login">Login</string>
    <string name="login_image">Image Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="logout">Logout</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="copyright">© 2022 My Story App</string>
    <string name="menu_1">Add</string>
    <string name="menu_2">Setting</string>
    <string name="menu_3">Logout</string>
    <string name="menu_4">Map</string>
    <string name="image_story">Image Story</string>
    <string name="name_story">Name Story</string>
    <string name="desc_story">Desc Story</string>
    <string name="alert_dialog_login">You have successfully logged in. Cant wait to talk, huh?</string>
    <string name="alert_dialog_register">The account is ready. Come on, log in and tell a story.</string>
    <string name="alert_dialog_create">Thank you, your story has been uploaded successfully</string>
    <string name="name_empty">Enter Name</string>
    <string name="email_empty">Enter Email</string>
    <string name="email_already">Email already used</string>
    <string name="email_format">Incorrect email format</string>
    <string name="password_empty">Enter Password</string>
    <string name="password_length">Password minimum 6 characters</string>
    <string name="create_upload_image">Image Upload</string>
    <string name="create_camera_name">Camera</string>
    <string name="create_gallery_name">Gallery</string>
    <string name="create_upload_name">Upload</string>
    <string name="create_desc">Description...</string>
    <string name="no_data">No data available</string>
    <string name="retry_text">Try Again</string>
    <string name="title_activity_maps">Maps Story</string>
    <string name="error_login">"Login failed, wrong email and password!"</string>
    <string name="error_load">"Failed to load data"</string>
    <string name="maps_lat_lon_format" translatable="false">Lat: %1$.2f Lon: %2$.2f</string>
    <string name="maps_no_location_selected">No location selected</string>
    <string name="maps_location_delete">Delete</string>
    <string name="maps_change">Change</string>
    <string name="maps_save">Save</string>
    <string name="dont_be_empty">"Don't be empty"</string>
    <string name="select_a_picture">"Please select a picture"</string>
    <string name="failed_to_take_picture">Failed to take pictures!</string>
    <string name="failed_to_start_camera">Failed to start the camera</string>
</resources>