<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.create.CreateFragment">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/create_upload_image"
        android:src="@drawable/img_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@color/grey"
        android:contentDescription="@string/create_camera_name"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        android:text="@string/create_camera_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

    <ImageButton
        android:id="@+id/btn_gallery"
        android:background="@color/grey"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/create_gallery_name"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_perm_media_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_gallery"
        android:text="@string/create_gallery_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background"
        android:gravity="top|start"
        android:hint="@string/create_desc"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="8"
        android:minLines="3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps_no_location_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/text_btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps_change"
        android:textColor="#DD2C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/create_upload_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>